# metron

./: Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
crates/metron_core/: Cargo.toml  README.md
crates/metron_core/src/: lib.rs  measure.rs  quantity.rs
crates/metron_core/src/convert/: mod.rs
crates/metron_core/src/fmt/: mod.rs
crates/metron_core/src/macros/: exp_scale.rs  exp_scale_base.rs  exp_scale_exp.rs  fmt_symbol.rs  measure.rs  mod.rs  quantity.rs  quantity_from.rs  unit.rs  unit_div.rs  unit_exp_scale.rs  unit_from.rs  unit_measure.rs  unit_mul.rs
crates/metron_core/src/unit/: mod.rs
crates/metron_core/src/unit/scale/: exp.rs  exp_old.rs  mod.rs
crates/metron_core_bak/: Cargo.toml
crates/metron_core_bak/src/: lib.rs  measure.rs
crates/metron_library/: Cargo.toml  README.md
crates/metron_library/src/: lib.rs
crates/metron_library/src/language/: mod.rs
crates/metron_library/src/systems/: mod.rs
crates/metron_library/src/systems/imperial_units/units/: mod.rs
crates/metron_library/src/systems/international_system_of_units/: mod.rs
crates/metron_library/src/systems/international_system_of_units/measure/: length.rs
crates/metron_library/src/systems/international_system_of_units/quantity/: length.rs
crates/metron_library/src/systems/international_system_of_units/units/: mod.rs  si_prefix.rs
crates/metron_library/src/systems/international_system_of_units/units/non_si/: mod.rs  unitless.rs
crates/metron_library/src/systems/international_system_of_units/units/si_base/: ampere.rs  candela.rs  kelvin.rs  kilogram.rs  metre.rs  mod.rs  mole.rs  second.rs
crates/metron_library/src/systems/international_system_of_units/units/si_derived/: metre_par_metre.rs  mod.rs  par_second.rs
crates/metron_library/src/systems/international_system_of_units/units/si_derived_named/: becquerel.rs  hertz.rs  mod.rs  square_meter.rs
crates/metron_macro/: Cargo.toml
crates/metron_macro/src/: exponential_scale.rs  geninmod.rs  lib.rs  type_from_ty.rs  unit.rs  util.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/use_lib/: Cargo.toml
examples/use_lib/src/: main.rs
src/: lib.rs
