[package]
name = "metron"
version = "0.0.1"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "crates/metron_core",
    "crates/metron_macro",
    "crates/metron_library",
    "examples/basic",
    "examples/use_lib",
]

[dependencies]
metron_core = {version = "0.0.1", path = "crates/metron_core" }
metron_library = {version = "0.0.1", path = "crates/metron_library" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false