[package]
name = "metron"
version = "0.0.1"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"
description = "utility crate for unit of measure "
readme = "README.md"
repository = "https://github.com/bbinber/metron/"
license = "MIT OR Apache-2.0"
keywords = ["units", "quantity", "measurement"]
categories = ["science", "data-structures" ]

[workspace]
members = [
    "crates/metron_core",
    "crates/metron_macro",
    "crates/metron_library",
    "examples/basic",
    "examples/use_lib",
]

[dependencies]
metron_core = {version = "0.0.1", path = "crates/metron_core" }
metron_library = {version = "0.0.1", path = "crates/metron_library" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false