[package]
name = "metron_core"
version = "0.1.0"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]



[dependencies]
typenum="1.13.0"
once_cell = "1.7.2"
num-traits = {version ="0.2.14", features=["std"]}
anyhow = "1.0.40"
metron_macro = {path = "../metron_macro" }