[package]
name = "metron_core"
version = "0.0.1"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"
description = "make easily your own measurement system of units"
readme = "README.md"
repository = "https://github.com/bbinber/metron/"
license = "MIT OR Apache-2.0"
keywords = ["units", "quantity", "measurement"]
categories = ["science", "data-structures" ]
[features]

[dependencies]
num-traits = {version ="0.2.14", features=["std"]}