[package]
name = "metron_library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metron_core = {path = "../metron_core", features = ["paste"]}
#paste = "1.0.5"
#metron_macro = {path = "../metron_macro"}