[package]
name = "metron_library"
version = "0.0.1"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"
description = "library of measurement system made with metron_core"
readme = "README.md"
repository = "https://github.com/bbinber/metron/"
license = "MIT OR Apache-2.0"
keywords = ["units", "quantity", "measurement"]
categories = ["science", "data-structures" ]

[dependencies]
metron_core = {version = "0.0.1", path = "../metron_core"}