[package]
name = "standard"
version = "0.1.0"
authors = ["A_Hibi <bb.is.what.he.believes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metron_core={path = "../../crates/metron_core" }
metron_library={path = "../../crates/metron_library" }
once_cell = "1.7.2"